<resources>
    <string name="app_name">PharmacyIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_passord">Enter your password</string>
    <string name="registered_before_click_here">Registered Before ? click here</string>
    <string name="sing_in">sign in</string>
    <string name="don_t_have_account_click_here">Don\'t have account ? click here</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_nav_drawer_">NavDrawer_Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_as_user">Signup as user</string>
    <string name="signup_as_doctor">Signup as doctor</string>
    <string name="press_on_imageview">press on imageView to change your photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="store_gps_location">We Will Store Your Current Gps Location</string>
    <string name="save_and_finish">Save and Finish</string>
</resources>
