<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbd8e9"
    tools:context="com.example.moham.navdrawerexample1.MainActivity">
    <include
        layout="@layout/tool_bar"
        android:id="@+id/toolbar_signup"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittextemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_your_mail" />

        <EditText
            android:id="@+id/edittextpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_your_passord"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registered_before_click_here"
            android:textAlignment="center"
            android:textSize="15sp"
            android:id="@+id/textview_signup"
            />

    </LinearLayout>
</RelativeLayout>
