<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e8327"
    tools:context="com.example.moham.navdrawerexample1.LoginActivity">

    <include
        android:id="@+id/toolbar_signin"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#07ff03"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signin_edittextemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_mail" />

        <EditText
            android:id="@+id/signin_edittextpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:hint="@string/enter_your_passord"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sing_in" />

        <TextView
            android:id="@+id/textview_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account_click_here"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>
