<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.moham.navdrawerexample1.SignUp.Signup_type_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/user_signup_btn_signuptype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_as_user" />

        <Button
            android:id="@+id/doc_signup_btn_signuptype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signup_as_doctor" />

        <TextView
            android:id="@+id/textview_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/registered_before_click_here"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
