<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0ece0"
    android:orientation="vertical"
    tools:context="com.example.moham.navdrawerexample1.SignUp.Information_Field_fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bddfd0"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_view_infField"
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:layout_margin="15dp"
                android:contentDescription="content description"
                android:src="@drawable/unknown" />

            <ImageButton
                android:id="@+id/rotate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#bddfd0"
                android:contentDescription="content description"
                android:src="@drawable/rotate" />
        </FrameLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#c0ded0">

        <TableRow android:layout_marginBottom="20dp">

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittextFirstname"
                android:layout_width="240dp"
                android:background="@color/colorWhite"
                android:hint="  Your First Name" />
        </TableRow>

        <TableRow android:layout_marginBottom="20dp">

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittextlastname"
                android:layout_width="240dp"
                android:background="@color/colorWhite"
                android:hint="  Your Last Name" />
        </TableRow>

        <TableRow android:layout_marginBottom="20dp">

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/user_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittextusername"
                android:layout_width="240dp"
                android:background="@color/colorWhite"
                android:hint="  Your User Name" />
        </TableRow>

        <TableRow android:layout_marginBottom="20dp">

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittextphone"
                android:layout_width="240dp"
                android:background="@color/colorWhite"
                android:hint="  Your Phone Number"
                android:inputType="phone" />
        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/store_gps_location"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveButtonInfField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_and_finish" />

</LinearLayout>
